# intelhwCodec

./: CMakeLists.txt  encode.c  encode.h  gpu.c  gpu.h  main.c  proto.c
